--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>I</span>
-        <span>C</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>L</span>
+        <span>D</span>
+        <span>E</span>
+        <span>Y</span>
+        <span>Y</span>
+        <span>O</span>
+        <span>O</span>
+        <span>O</span>
         <span>🖤</span>
     </div>
     <div class="description">
